-fixed smooth bus movements -fixed popup visibility -added GTFS status on the map -fixed bottom menu -fixed feedback widget making it not anonymous.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-    height: 100%;
+    height: calc(100% - 33px);
     margin: 0;
     padding: 0;
     display: flex;
@@ -9,44 +9,35 @@ body, html {
     flex-grow: 1; /* Take up all available space */
 }
 .bottom-menu {
-    display: flex;
-    justify-content: space-around;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
-    color: white;
-    z-index: 1001;
-}
-
-.bottom-menu {
-    position: fixed;       /* Fixed position to keep it at the bottom */
-    bottom: 0;             /* Aligns to the bottom */
-    left: 0;               /* Spans from the left edge */
-    right: 0;              /* Spans to the right edge */
-    background-color: #fff; /* Light background for the menu */
-    box-shadow: 0 -2px 4px rgba(0,0,0,0.1); /* Subtle shadow for a floating effect */
+        position: fixed;       /* Fixed position to keep it at the bottom */
+        bottom: 0;             /* Aligns to the bottom */
+        left: 0;               /* Spans from the left edge */
+        right: 0;              /* Spans to the right edge */
+        background-color: #fff; /* Light background for the menu */
+        box-shadow: 0 -2px 4px rgba(0,0,0,0.1); /* Subtle shadow for a floating effect */
     z-index: 100;          /* Ensures it is above other content */
     text-align: center;    /* Centers the content within */
 }
+
+
+}
+.toggle-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    padding: 10px;
+    background: white;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+
+
 
 .tab-content {
     display: inline-block; /* Inline-block for horizontal alignment */
     padding: 10px 15px;    /* Padding for spacing */
     text-decoration: none; /* Removes underline from links */
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-.tab-content {
-    display: none;
-    /* Position offscreen initially */
     position: fixed;
     top: 0;
     left: -100vw;
@@ -56,6 +47,13 @@ body, html {
     transition: left 0.3s; /* Smooth transition for sliding in */
     background-color: rgba(0, 0, 0, 0.7); /* Corrected semi-transparent black */
     color: white;
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 }
 .tab-content.active {
     /*display: block;*/
@@ -65,7 +63,7 @@ body, html {
     /* Bring the active tab onscreen */
 }
 .leaflet-popup-pane {
-    z-index: 10;
+    z-index: 1200;
 }
 h3 {
     position: absolute;
